--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(workshop1.2)
 add_subdirectory(workshop1.3)
 add_subdirectory(workshop2.1)
 add_subdirectory(workshop2.2)
+add_subdirectory(workshop2.3)
