--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(workshop2.4)
 add_subdirectory(workshop2.5)
 add_subdirectory(workshop2.6)
 add_subdirectory(workshop2.7)
+add_subdirectory(workshop3.3)
