--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(workshop2.5)
 add_subdirectory(workshop2.6)
 add_subdirectory(workshop2.7)
 add_subdirectory(workshop3.3)
+add_subdirectory(workshop3.1)
